tests/test_moto_api/extensions/valid_examples/noop_extension.py
from moto.extensions import AbstractExtension


class NoOpExtension(AbstractExtension):
    def extension_id(self):
        return "noop"
